# robot2_pi

src/robot2_control/: package.xml  setup.cfg  setup.py
src/robot2_control/launch/: test.launch.py
src/robot2_control/robot2_control/: __init__.py  test_pub.py
src/robot2_controller/: package.xml  setup.cfg  setup.py
src/robot2_controller/config/: camera_config.yaml
src/robot2_controller/launch/: camera.launch.py
src/robot2_controller/resource/: robot2_controller
src/robot2_controller/robot2_controller/: __init__.py
src/robot2_controller/robot2_controller/camera/: __init__.py  camera_node.py
