<?xml version="1.0"?>
<package format="3">
  <name>robot2_control</name>
  <version>0.0.1</version>
  <description>Robot 2 Control Package</description>
  
  <maintainer email="chandan@example.com">chandan</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot3_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>